k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urban-fantasy-app
  labels:
    app: urban-fantasy-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: urban-fantasy-app

  template:
    metadata:
      labels:
        app: urban-fantasy-app

    spec:
      containers:
        - name: urban-fantasy-app
          image: ajaxatx/urban-fantasy-app:5

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
