k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urban-fantasy-service

spec:
  selector:
    app: urban-fantasy-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
