k8s/status-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urban-fantasy-status-api-service

spec:
  selector:
    app: urban-fantasy-status-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
