k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urban-fantasy-ingress
  annotations:
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: urban-fantasy-service
                port:
                  number: 80
